fix responsive issues with testimonials and homepage tabbing image display on mobile.

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -142,7 +142,9 @@
 	}
 	#testimonials {
 		.quotewrap {
+			width: auto;
 			.quote {
+				@include transform(translate(0,50px));
 				.quote_image {
 					display: block;
 					@include transform(translate(0,-100px));
@@ -299,6 +301,21 @@
 			}
 		}
 	}
+	#testimonials {
+		.quotewrap {
+			margin-bottom: 150px;
+			.quote {
+				.quote_image {
+					@include transform(translate(0,6px));
+				}
+				&:last-child {
+					.quote_image {
+						@include transform(translate(0,6px));
+					}
+				}
+			}
+		}
+	}
 }
 @media(max-width: 991px) {
 	#top {
@@ -383,9 +400,6 @@
 	video {
 		display: none;
 	}
-	.mobile {
-		display: block;
-	}
 	.block {
 		height: auto;
 		padding: 50px 0; 
@@ -438,7 +452,6 @@
 	}
 	#testimonials {
 		.quotewrap {
-			padding-top: 50px;
 			.quote {
 				.quote_image {
 					@include transform(translate(0, 6px));
@@ -528,6 +541,9 @@
 @media(max-width: 414px) {
 	.hide_mobile {
 		display: none;
+	}
+	.mobile {
+		display: block;
 	}
 	#newsletterFrm {
 		height: 115px;
